# corehard2018

./: corehard.sublime-workspace
kdd99/: CMakeLists.txt  conanfile.txt
kdd99/include/kdd99/: catboost_classifier.h
kdd99/src/: catboost_classifier.cpp
kdd99/tests/: test_catboost_classifier.cpp  test_logreg_classifier.cpp
kdd99/train/: KDD99.ipynb  logreg_coef.txt  model.cbm
kdd99/train/.ipynb_checkpoints/: KDD99-checkpoint.ipynb
kdd99/train/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
kdd99/train/catboost_info/learn/: events.out.tfevents
kdd99/train/catboost_info/test/: events.out.tfevents
mnist/: CMakeLists.txt  conanfile.txt
mnist/include/mnist/: classifier.h  tf_classifier.h
mnist/src/: mlp_classifier.cpp  tf_classifier.cpp
mnist/tests/: test_mlp.cpp  test_tf.cpp
mnist/train/: Untitled.ipynb  model.h5  model.json  model.pb  test_mnist_cnn.txt  test_mnist_mlp.txt  test_mnist_mlp_classes.txt  w1.txt  w2.txt
mnist/train/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
